--- a/Views/LoginScreen/Main.cshtml
+++ b/Views/LoginScreen/Main.cshtml
@@ -3,8 +3,13 @@
     ViewData["Title"] = "Notes";
 }
 
-<div class="ms-auto me-auto w-50" style="margin-top: 15%">
-    <a class="btn btn-success w-100 m-1 p-3" asp-action="">Войти</a>
-    <a class="btn btn-outline-success m-1 p-3 w-100" asp-action="">Зарегистрироваться</a>
+<div class="page h-100">
+
+    <h1 class="logo">Notes</h1>
+
+    <div class="button-block">
+        <a class="m-3 p-3 button" asp-action="">Войти</a>
+        <a class="m-3 p-3 button" asp-action="">Зарегистрироваться</a>
+    </div>
 </div>
 
