--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,23 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewData["Title"] WebNotes</title>
+    <title>@ViewData["Title"] Notes</title>
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebNotes.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/OwnScreen.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 </head>
-<body>
-    <header class="bg-gradient p-3 h-auto container-fluid bg-info">
-        <nav class="navbar-expand-sm navbar-toggleable-sm ps-4 pe-4">
-            <h2 class="">ToDo</h2>
-        </nav>
-    </header>
-
-    
-
-    <div class="container">
+<body>    
+    <div class="">
         <main role="main">
             @RenderBody()
         </main>
