--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -9,10 +9,7 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+    position: relative;
+    min-height: 100%;
+    background-color: #f5f0e1;
 }
