--- a/Views/CollectionOfNotes/Upsert.cshtml
+++ b/Views/CollectionOfNotes/Upsert.cshtml
@@ -25,17 +25,17 @@
 
         <div class="input-note-grid">
             <div class="w-100 me-3">
-                <textarea oninput="auto_grow(this)" maxlength="250" type="text" class="input-note w-100" placeholder="Введите заголовок" asp-for="@Model.Title">@Model.Title</textarea>
-                <textarea oninput="auto_grow(this)" maxlength="1000" type="text" class="input-note w-100" placeholder="Введите содержание" asp-for="@Model.Description">@Model.Description</textarea>
+                <textarea oninput="auto_grow(this)" style="min-height: 220px;" maxlength="250" type="text" class="input-note w-100" required placeholder="Введите заголовок" asp-for="@Model.Title">@Model.Title</textarea>
+                <textarea oninput="auto_grow(this)" style="min-height: 580px;" maxlength="1000" type="text" class="input-note w-100" placeholder="Введите содержание" asp-for="@Model.Description">@Model.Description</textarea>
             </div>
             <div class="w-auto align-items-center">
-                <a asp-action="Grid" class=" d-block upgrade-btn back">
+                <a asp-action="Grid" class=" d-block upgrade-btn back w-100">
                     Вернуться
                 </a>
-                <input type="submit" class="d-block scs" value="Сохранить"/>
+                <button class="d-block upgrade-btn scs w-100" type="submit">Сохранить</button>
                 @if (Model.Id != 0 && Model.Id != null)
                 {
-                    <a asp-action="Delete" asp-route-id="@Model.Id" class=" d-block upgrade-btn remove">
+                    <a asp-action="Delete" asp-route-id="@Model.Id" class=" d-block upgrade-btn remove w-100">
                         Удалить
                     </a>
                 }
@@ -50,7 +50,6 @@
 @section Scripts {
         <script>
             function auto_grow(element) {
-            element.style.height = "5px"
                 element.style.height = (element.scrollHeight)+"px";
             }
         </script>
