--- a/Views/LoginScreen/Register.cshtml
+++ b/Views/LoginScreen/Register.cshtml
@@ -12,10 +12,10 @@
         </nav>
         <div class="d-block w-25 m-auto p-5">
             <h1 class="alert-add-note text-center">Регистрация</h1>
-            <input asp-for="Login" maxlength="20" min="6" required type="text" class="w-100 m-1 user-data" placeholder="Введите логин"/>
-            <input asp-for="Password" type="text" required  maxlength="25" class="w-100 m-1 user-data" placeholder="Введите пароль"/>
-            <input asp-for="ConfirmPassword" type="text" required min="8" maxlength="25" class="w-100 m-1 user-data" placeholder="Повторите пароль" />
-            <input class="btn btn-secondary w-100 m-1" type="submit" value="Зарегистрироваться"/>
+            <input asp-for="Login" maxlength="20" min="6" autocomplete="off" required type="text" class="w-100 m-1 user-data" placeholder="Введите логин"/>
+            <input asp-for="Password" type="text" required autocomplete="off"  maxlength="25" class="w-100 m-1 user-data" placeholder="Введите пароль"/>
+            <input asp-for="ConfirmPassword" type="text" autocomplete="off" required min="8" maxlength="25" class="w-100 m-1 user-data" placeholder="Повторите пароль" />
+            <button class="btn btn-secondary w-100 m-1" type="submit">Зарегистрироваться</button>
             <a asp-action="Login" class="btn btn-outline-secondary w-100 m-1">Войти</a>
         </div>
     </div>
