--- a/Views/LoginScreen/Main.cshtml
+++ b/Views/LoginScreen/Main.cshtml
@@ -1,9 +1,4 @@
-﻿
-@{
-    ViewData["Title"] = "Notes";
-}
-
-<div class="page h-100">
+﻿<div class="page h-100">
 
     <h1 class="logo">Notes</h1>
 
