--- a/Views/CollectionOfNotes/Grid.cshtml
+++ b/Views/CollectionOfNotes/Grid.cshtml
@@ -1,55 +1,65 @@
-﻿@using System;
-@model IEnumerable<Note>
+﻿@model WebNotes.Models.Notes.VMNotes
 
-<div class="page">
-    <nav class="header d-flex justify-content-between align-items-center">
-        <h1 class="name">
-            Notes
-        </h1>
-        <div>
-            <a asp-action="Exit" class="btn " style="color: #ffc13b;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-                  <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+<form method="post">
+    <div class="page">
+        <nav class="header d-flex justify-content-between align-items-center">
+            <h1 class="name">
+                Notes
+            </h1>
+
+            <div>
+                <button type="submit" class="btn " style="color: #ffc13b;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                    </svg>
+                </button>
+            </div>
+        </nav>
+
+        @if (Model.message != null)
+        {
+            <div class="alert alert-warning alert-dismissible fade show w-25 d-flex justify-content-center align-items-center ms-auto m-2" role="alert">
+                <strong>@Model.message</strong>
+                <a asp-action="Exit" class="btn btn-secondary-outline text-danger ms-auto fw-bold">Выйти</a>
+                <button type="button" class="btn btn-secondary-outline ms-auto text-success fw-bold" data-bs-dismiss="alert" aria-label="Close">Отмена</button>
+            </div>
+        }
+        
+        @if (!Model.notes.Any())
+        {
+            <div class="d-flex justify-content-center">
+                <div class="alert-add-note">Добавьте заметку</div>
+            </div>
+        }
+
+        <div class="grid-but">
+
+            <a asp-action="Upsert" class="note-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
                 </svg>
             </a>
-        </div>
-    </nav>
 
-    @if (!Model.Any())
-    {
-        <div class="d-flex justify-content-center">
-            <div class="alert-add-note">Добавьте заметку</div>
-        </div>
-    }
-
-    <div class="grid-but">
-
-        <a asp-action="Upsert" class="note-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-            </svg>
-        </a>
-
-        @if (Model.Count() > 0)
-        {
-            
-            @foreach (var obj in Model)
+            @if (Model.notes.Count() > 0)
             {
-                @if (obj.Title.Length > 15)
+                @foreach (var obj in Model.notes)
                 {
-                    <a asp-action="Upsert" asp-route-id="@obj.Id" class="note-button">
-                        @obj.Title.ToString().Substring(0, 15)...
-                    </a>
-                }
-                else
-                {
-                    <a asp-action="Upsert" asp-route-id="@obj.Id" class="note-button">
-                        @obj.Title
-                    </a>
+                    @if (obj.Title.Length > 15)
+                    {
+                        <a asp-action="Upsert" asp-route-id="@obj.Id" class="note-button">
+                            @obj.Title.Substring(0, 15)...
+                        </a>
+                    }
+                    else
+                    {
+                        <a asp-action="Upsert" asp-route-id="@obj.Id" class="note-button">
+                            @obj.Title
+                        </a>
+                    }
                 }
             }
-        }
+        </div>
     </div>
-</div>
+</form> 
 
