--- a/Views/LoginScreen/Register.cshtml
+++ b/Views/LoginScreen/Register.cshtml
@@ -27,9 +27,17 @@
         </div>
         
                 
-        @if (Model.Error.Description != null)
+        @if (Model.Error.Description != null && Model.Error.Description != "Пользователь успешно создан")
         {
-            <div class="alert alert-warning alert-dismissible fade show w-25 d-flex justify-content-center m-auto" role="alert">
+            <div class="alert alert-danger alert-dismissible fade show w-25 d-flex justify-content-center m-auto" role="alert">
+                <strong>@Model.Error.Description</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
+        }
+        else if (Model.Error.Description != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show w-25 d-flex justify-content-center m-auto" role="alert">
                 <strong>@Model.Error.Description</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
