--- a/Views/LoginScreen/Main.cshtml
+++ b/Views/LoginScreen/Main.cshtml
@@ -7,7 +7,7 @@
 
         @if (Model.Error.Description != null)
         {
-            <div class="alert alert-warning alert-dismissible fade show w-25 d-flex justify-content-center m-auto" role="alert">
+            <div class="alert alert-danger alert-dismissible fade show w-25 d-flex justify-content-center m-auto" role="alert">
                 <strong>@Model.Error.Description</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
